# Humanizer

./: README.md  pyproject.toml  requirements.txt  walkthroughp2
configs/: model_config.yaml  noise_profiles.yaml  style_profiles.yaml
humanizer/: __init__.py  config.py
humanizer/api/: app.py  routes.py  schemas.py
humanizer/critic/: critic_model.py
humanizer/inference/: inference_layer.py
humanizer/pipeline/: memory_drift.py  multi_pass.py  pipeline_modes.py
humanizer/postprocessing/: postprocessor.py
humanizer/preprocessing/: chunker.py  sanitizer.py
humanizer/router/: model_router.py
humanizer/style/: prefix_encoder.py  style_profiles.py  style_vector.py
humanizer/utils/: __init__.py
humanizer/validation/: safety.py  semantic_checks.py
scripts/: setup_lightning.sh  validate_pipeline.py
tests/: test_phase2.py  test_pipeline.py  test_preprocessing.py  test_utils.py
