[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanizer"
version = "2.0.0"
description = "Transformer-based text rewriting system — Humanizer Edition"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",

    # ML / Transformers
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.6.0",
    "accelerate>=0.28.0",

    # NLP utilities
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "textstat>=0.7.3",
    "langdetect>=1.0.9",

    # Safety / Toxicity
    "detoxify>=0.5.2",

    # Misc
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
]
gpu = [
    "vllm>=0.4.0",
    "bitsandbytes>=0.43.0",
    "auto-gptq>=0.7.0",
]
training = [
    "trl>=0.8.0",
    "peft>=0.10.0",
    "datasets>=2.18.0",
    "mlflow>=2.11.0",
    "wandb>=0.16.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["humanizer*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
